objects/Contact.object
<CustomObject>
    <fields>
        <fullName>TW1_Apelido__c</fullName>
        <label>Apelido</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Bairro__c</fullName>
        <label>Bairro</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Baixou_aplicativo__c</fullName>
        <label>Baixou aplicativo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_CEP__c</fullName>
        <label>CEP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_CNPJ__c</fullName>
        <externalId>true</externalId>
        <label>CNPJ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_CPF__c</fullName>
        <externalId>true</externalId>
        <label>CPF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Cidade__c</fullName>
        <label>Cidade</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Complemento__c</fullName>
        <label>Complemento</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_DDD__c</fullName>
        <label>DDD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_DDI__c</fullName>
        <defaultValue>55</defaultValue>
        <label>DDI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_Admissao__c</fullName>
        <label>Data de Admissão</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_Nascimento__c</fullName>
        <label>Data de Nascimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_demissao__c</fullName>
        <label>Data de demissão</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_emissao__c</fullName>
        <label>Data de emissão</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Estado_civil__c</fullName>
        <label>Estado civil</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solteiro(a)</fullName>
                </value>
                <value>
                    <fullName>Casado(a)</fullName>
                </value>
                <value>
                    <fullName>Viúvo(a)</fullName>
                </value>
                <value>
                    <fullName>Divorciado(a)</fullName>
                </value>
                <value>
                    <fullName>União estável</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Grau_de_instrucao__c</fullName>
        <label>Grau de instrução</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fundamental - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Fundamental - Completo</fullName>
                </value>
                <value>
                    <fullName>Médio - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Médio - Completo</fullName>
                </value>
                <value>
                    <fullName>Superior - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Superior - Completo</fullName>
                </value>
                <value>
                    <fullName>Pós-graduação - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Pós-graduação - Completo</fullName>
                </value>
                <value>
                    <fullName>Mestrado - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Mestrado - Completo</fullName>
                </value>
                <value>
                    <fullName>Doutorado - Incompleto</fullName>
                </value>
                <value>
                    <fullName>Doutorado - Completo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Identidade__c</fullName>
        <label>Identidade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Lugradouro__c</fullName>
        <label>Lugradouro</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nacionalidade__c</fullName>
        <label>Nacionalidade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Naturalidade__c</fullName>
        <label>Naturalidade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Numero__c</fullName>
        <label>Número</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_SGL_Shopping__c</fullName>
        <formula>Account.TW1_Shopping__r.TW1_SGL_Empreendimento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGL Shopping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <label>Shopping</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_UF__c</fullName>
        <label>UF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_UF_de_emissao__c</fullName>
        <label>UF de emissão</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Executivos</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.TW1_Executivo_de_vendas</value>
        </filters>
        <label>Executivos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Funcion_rios</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.TW1_Cadastro_Func</value>
        </filters>
        <label>Funcionários</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Meus Contatos</label>
    </listViews>
    <recordTypes>
        <fullName>TW1_Assistente_de_comercializacao</fullName>
        <active>true</active>
        <description>Utilizar este tipo de registro para cadastrar os assistentes comerciais.</description>
        <label>Assistente de comercialização</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Cadastro_Func</fullName>
        <active>true</active>
        <label>Cadastro de Funcionário</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Contato</fullName>
        <active>true</active>
        <label>Contato</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Executivo_de_vendas</fullName>
        <active>true</active>
        <description>Utilizar este tipo de registro para cadastrar os executivos de vendas.</description>
        <label>Executivo de vendas</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>